
BUGFIX	scans occasionally skip cooldown period due to lock issue

FEATURE	added context to allow easier packaging in Debian and Ubuntu and Fedora and Brew and Macports

FEATURE	remove dnet dependency for linux

FEATURE remove random extra printed saddr

FEATURE	build with optimizations by default

FEATURE	added JSON metadata output

FEATURE added syslog support

FEATURE	added BSD/mac support

BUGFIX	removed bizarre executible bits on random example code in git repo

FEATURE	added support for scanning by FQDN

FEATURE	adding sharding support

1.2.1	2014-06-09
FEATURE	autodetect number of sender threads

FEATURE add ignore-invalid-hosts option for blacklist

BUGFIX	UDP scans sometimes double-counted IP header length

BUGFIX	Properly check UDP packet length

BUGFIX	Integer overflow in json metadata when printing generator

BUGFIX	All calls to malloc checked for failure

2.1.0	2014-06-07

CHANGED json output uses underscores instead of hyphens

CHANGED removes support for deprecated simple_file and extended_file options

BUGFIX  pcap filter captures outgoing packets

BUGFIX  install overwrites blacklist file

BUGFIX  output is sometimes colored

FEATURE	zblacklist

FEATURE	ztee

CHANGED	remove space in csv output header

CHANGED	build with JSON support by default

FEATURE	ntp probe module

BUGFIX	finding a generator would crash with low probability

CHANGED	don't print blacklisted CIDR blocks to log

FEATURE	status-updates-file (monitor output as a csv)

CHANGED	output to stdout by default

BUGFIX	use correct email for Zakir in AUTHORS

FEATURE	add redis-csv output module

CHANGED	probe module API takes user data argument

FEATURE	colored log output

FEATURE	add pf_ring and 10GigE support

BUGFIX	random-number generator is now thread safe

FEATURE	optional app-success field output in monitor

CHANGED remove type field from json output module and get rid of header

FEATURE Add icmp-echo-time probe module for measuring RTT