@@ -109,7 +109,6 @@ struct state_conf {
 	char *log_directory;
 	char *status_updates_file;
 	int dryrun;
-	int summary;
 	int quiet;
 	int ignore_invalid_hosts;
 	int syslog;
