@@ -3,7 +3,6 @@
 
 #include <stdio.h>
 
-void summary();
 void json_metadata(FILE *);
 
 #endif /* ZMAP_SUMMARY_H */
