@@ -271,9 +271,6 @@ static void start_zmap(void)
 	}
 
 	// finished
-	if (zconf.summary) {
-		summary();
-	}
 #ifdef JSON
 	if (zconf.metadata_filename) {
 		json_metadata(zconf.metadata_file);
@@ -512,7 +509,6 @@ int main(int argc, char *argv[])
 
 	SET_BOOL(zconf.dryrun, dryrun);
 	SET_BOOL(zconf.quiet, quiet);
-	SET_BOOL(zconf.summary, summary);
 	SET_BOOL(zconf.ignore_invalid_hosts, ignore_invalid_hosts);
 	zconf.cooldown_secs = args.cooldown_time_arg;
 	SET_IF_GIVEN(zconf.output_filename, output_file);
