@@ -138,8 +138,6 @@ option "status-updates-file"    u "Write scan progress updates to CSV file"
     optional string
 option "quiet"                  q "Do not print status updates"
     optional
-option "summary"                g "Print configuration and summary at end of scan"
-    optional
 option "disable-syslog"         - "Disables logging messages to syslog"
     optional
 option "notes"                  - "Inject user-specified notes into scan metadata"
