@@ -155,3 +155,6 @@ FEATURE	optional app-success field output in monitor
 CHANGED remove type field from json output module and get rid of header
 
 FEATURE Add icmp-echo-time probe module for measuring RTT
+
+CHANGED remove --summary
+
